# aisploit-recon

./: .env.example  .gitignore  AI_HANDOFF.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
docs/: AI_TASK_PROMPT.md  ARCHITECTURE.md  AUTHORIZATION.md  DESIGN.md  IMPLEMENTATION_PLAN.md  PAYLOAD_AUTHORING.md  SECURITY_REVIEW.md
examples/: scope.example.yaml  transport.http.json  transport.playwright.json  transport.sse.json
src/aisploit_recon/: __init__.py  cli.py
src/aisploit_recon/config/: scope.py  settings.py
src/aisploit_recon/core/: auth.py  baseline.py  models.py  scheduler.py  scope_guard.py  session.py  ssrf_guard.py
src/aisploit_recon/detection/: canary.py  heuristic.py  llm_judge.py  pipeline.py  signature.py  types.py
src/aisploit_recon/evidence/: models.py  store.py
src/aisploit_recon/payloads/: models.py  mutators.py  registry.py
src/aisploit_recon/reporting/: export.py  generator.py  severity.py
src/aisploit_recon/reporting/templates/: report.html.j2  report.md.j2
src/aisploit_recon/transport/: base.py  http_driver.py  playwright_driver.py
src/aisploit_recon/utils/: crypto.py  logging.py
tests/: conftest.py
tests/fixtures/mock_ai_app/: app.py
tests/integration/: test_scanner_vs_mock.py
tests/unit/: test_auth_capture.py  test_baseline.py  test_detectors.py  test_export_diff.py  test_multi_turn.py  test_mutators_and_scoring.py  test_repro_manifest.py  test_scope_guard.py
